[package]
name = "borsh_tickarray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "0.9.1", features = ["const-generics"]}
borsh-derive = "0.9.1"
solana-program = "=1.7.4"

[dev-dependencies]
solana-program-test = "=1.7.4"
solana-sdk = "=1.7.4"
