[package]
name = "auth_with_nft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.2"
spl-token = { version = "3.2", features = [ "no-entrypoint" ] }
borsh = "0.9.1"

[dev-dependencies]
solana-program-test = "1.9.2"
solana-sdk = "1.9.2"

[lib]
crate-type = ["cdylib", "lib"]
