[package]
name = "with_anchor_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "swap"
path = "src/swap.rs"

[[bin]]
name = "open_position_with_liquidity"
path = "src/open_position_with_liquidity.rs"

[dependencies]
shellexpand = "2.1.0"
anyhow = "1.0.32"

# solana
solana-sdk = "1.10.8"
solana-client = "1.10.8"
solana-client-helpers = "1.1.0"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = "1.1.2"

# decimal
#rust_decimal = { version = "1.23", features = ["maths"] }
#rust_decimal_macros = "1.23"

# bigint
num-bigint = "0.4.3"
num-traits = "0.2.15"

bigdecimal = "0.3.0"

# anchor
anchor-lang = { git = "https://github.com/project-serum/anchor", tag = "v0.20.1", package = "anchor-lang" }
anchor-spl = { git = "https://github.com/project-serum/anchor", tag = "v0.20.1", package = "anchor-spl" }
anchor-client = { git = "https://github.com/project-serum/anchor", tag = "v0.20.1", package = "anchor-client" }

# whirlpool as crate
whirlpool = { git = "https://github.com/orca-so/whirlpools", tag = "0.2.0", package = "whirlpool", features = ["cpi"] }
