[package]
name = "anchor0250"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor0250"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
whirlpool = { git = "https://github.com/orca-so/whirlpools", tag = "0.4.0", package = "whirlpool", features = ["cpi"] }