[package]
name = "cpi_whirlpool_anchor_gen_v0250"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_whirlpool_anchor_gen_v0250"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
whirlpools = "0.3.0" # https://crates.io/crates/whirlpools
